# python-calculating-differences

./: .travis.yml  Makefile  README.md  plain-h.txt  pyproject.toml
formatters/: float.py  json_format.py  plain_format.py  print_format.py
gendiff/: gendiff.py  parsers.py
gendiff/formatters/: json_format.py  json_print_format.py  plain_format.py
gendiff/scripts/: gendiff_package.py  gendiff_script.py  plain-h.txt  text-h.txt  text.txt
gendiff/scripts/json/: h_first.json  h_second.json
gendiff/scripts/yml/: after.yml  after_nested.yml
tests/: plain-h.txt  test_diff.py
tests/fixtures/: float_res.txt  test_result.py
tests/fixtures/files/: second.yml
tests/fixtures/json/json_result/: flat_diff.txt  flat_nested_diff.txt  flat_text_diff.txt  flat_text_nested_diff.txt
tests/fixtures/results/: flat_diff.txt  flat_nested_diff.txt  flat_text_nested_diff.txt  json_nested
tests/fixtures/yaml/: after_nested.yml  before_nested.yml
tests/fixtures/yaml/yaml_result/: flat_nested_diff.txt  flat_text_diff.txt
