[tool.poetry]
name = "litovsky-get-diff-files"
version = "0.1.5"
description = "Test Project"
authors = ["Alexander <berpress@gmail.com>"]
packages = [{ include = "gendiff" }]

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_package:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
